--- a/.tekton/listener.yaml
+++ b/.tekton/listener.yaml
@@ -8,8 +8,8 @@ spec:
       description: the git repository
     - name: revision
       description: the git repo branch 
-    - name: gitToken
-      description: the Git Token
+    - name: apikey
+      description: the api key
   resourcetemplates:
     # CD secret to provide API_KEY to access toolchain information
     - apiVersion: v1
@@ -18,7 +18,7 @@ spec:
         name: cd-secret
       type: Opaque
       stringData:
-        GIT_TOKEN: $(params.gitToken)
+        apikey: $(params.apikey)
     - apiVersion: v1
       kind: PersistentVolumeClaim
       metadata:
@@ -42,20 +42,12 @@ spec:
             persistentVolumeClaim:
               claimName: pipelinerun-$(uid)-pvc
         params:
-          - name: botToken
-            value: $(params.botToken)
           - name: repository
             value: $(params.repository)
           - name: revision
             value: $(params.revision)
-          - name: channelIDSource
-            value: $(params.channelIDSource)
-          - name: channelIDDestination
-            value: $(params.channelIDDestination)
-          - name: groupID
-            value: $(params.groupID)
-          - name: serviceName
-            value: $(params.serviceName)
+          - name: apikey
+            value: $(params.apikey)
 
 ---
 apiVersion: tekton.dev/v1beta1
