--- a/.tekton/test.yaml
+++ b/.tekton/test.yaml
@@ -8,7 +8,7 @@ spec:
       description: the git repository
     - name: revision
       description: the revision
-      default: master
+      default: main
     - name: apikey
       description: the ibmcloud api key
     - name: api
