--- a/.tekton/test.yaml
+++ b/.tekton/test.yaml
@@ -1,7 +1,7 @@
 apiVersion: tekton.dev/v1beta1
 kind: Task
 metadata:
-  name: Activity_tracker-task
+  name: activity_tracker-task
 spec:
   params:
     - name: repository
