--- a/.tekton/listener.yaml
+++ b/.tekton/listener.yaml
@@ -36,7 +36,7 @@ spec:
         name: pipelinerun-$(uid)
       spec:
         pipelineRef:
-          name: pipeline
+          name: activitytracker-pipeline
         workspaces:
           - name: pipeline-pvc
             persistentVolumeClaim:
