--- a/.tekton/task.yaml
+++ b/.tekton/task.yaml
@@ -48,6 +48,7 @@ spec:
           ibmcloud login -a $(params.api) -r in-che --apikey $apikey;
           cd /workspace;      
           echo "staring install";
+          sudo apt-get install
           GET /ibm-cloud-cli-plugin-metadata/bluemix-repo-index.yml HTTP/1.1;
           ibmcloud plugin install logging;
           ibmcloud plugin install atracker;
