--- a/.tekton/task.yaml
+++ b/.tekton/task.yaml
@@ -53,3 +53,4 @@ spec:
           ibmcloud logging service-instances --output wide --all-regions;
           ibmcloud logging service-instances --output wide --all-regions --sn logdnaat;
           ibmcloud resource service-instances
+          cf services;
