--- a/.tekton/task.yaml
+++ b/.tekton/task.yaml
@@ -52,5 +52,6 @@ spec:
           ibmcloud plugin install logging;
           ibmcloud logging service-instances --output wide --all-regions;
           ibmcloud logging service-instances --output wide --all-regions --sn logdnaat;
-          ibmcloud resource service-instances
+          ibmcloud resource service-instances;
+          cloudfoundry services; 
           cf services;
