--- a/.tekton/task.yaml
+++ b/.tekton/task.yaml
@@ -56,5 +56,5 @@ spec:
           apt-get -y update;
           apt-get -y install python3;
           apt-get -y install python3-pip;
-          pip3 install cf.cli;
+          pip3 install cfcli;
           cf services;
