--- a/.tekton/task.yaml
+++ b/.tekton/task.yaml
@@ -53,8 +53,5 @@ spec:
           ibmcloud logging service-instances --output wide --all-regions;
           ibmcloud logging service-instances --output wide --all-regions --sn logdnaat;
           ibmcloud resource service-instances;
-          apt-get -y update;
-          apt-get -y install python3;
-          apt-get -y install python3-pip;
-          pip3 install cfcli;
-          cf services;
+          ibmcloud plugin install cloud-object-storage;
+          ibmcloud cos config list;
