--- a/.tekton/task.yaml
+++ b/.tekton/task.yaml
@@ -53,5 +53,6 @@ spec:
           ibmcloud logging service-instances --output wide --all-regions;
           ibmcloud logging service-instances --output wide --all-regions --sn logdnaat;
           ibmcloud resource service-instances;
+          ibmcloud resource service-instance $AT1
           ibmcloud plugin install cloud-object-storage;
           ibmcloud cos config list;
