--- a/.tekton/listener.yaml
+++ b/.tekton/listener.yaml
@@ -10,6 +10,8 @@ spec:
       description: the git repo branch 
     - name: apikey
       description: the api key
+    - name: AT1
+      description: the instance AT
   resourcetemplates:
     # CD secret to provide API_KEY to access toolchain information
     - apiVersion: v1
@@ -48,6 +50,9 @@ spec:
             value: $(params.revision)
           - name: apikey
             value: $(params.apikey)
+          - name: AT1
+            value: $(params.AT1)
+
 
 ---
 apiVersion: tekton.dev/v1beta1
