--- a/.tekton/task.yaml
+++ b/.tekton/task.yaml
@@ -58,5 +58,7 @@ spec:
           ibmcloud logging service-instances --output wide --all-regions --sn logdnaat;
           ibmcloud resource service-instances;
           ibmcloud resource service-instance $(params.AT1);
+          ibmcloud cr plan;
           ibmcloud plugin install cloud-object-storage;
           ibmcloud cos config list;
+          
