--- a/.tekton/task.yaml
+++ b/.tekton/task.yaml
@@ -54,23 +54,23 @@ spec:
           echo "staring install";
           curl -fsSL https://clis.cloud.ibm.com/install/linux | sh;
           ibmcloud plugin install logging;
-          echo "--------------------------------------------------------------------------------------------------"
+          echo "--------------------------------------------------------------------------------------------------";
           ibmcloud logging service-instances --output wide --all-regions;
-          echo "--------------------------------------------------------------------------------------------------"
+          echo "--------------------------------------------------------------------------------------------------";
           ibmcloud logging service-instances --output wide --all-regions --sn logdnaat;
-          echo "--------------------------------------------------------------------------------------------------"
+          echo "--------------------------------------------------------------------------------------------------";
           ibmcloud resource service-instances;
-          echo "--------------------------------------------------------------------------------------------------"
+          echo "--------------------------------------------------------------------------------------------------";
           ibmcloud resource service-instance $(params.AT1);
-          echo "--------------------------------------------------------------------------------------------------"
+          echo "--------------------------------------------------------------------------------------------------";
           ibmcloud plugin install cloud-object-storage;
-          echo "--------------------------------------------------------------------------------------------------"
+          echo "--------------------------------------------------------------------------------------------------";
           ibmcloud resource service-instance Cloud-Object-Storage-hs;
-          echo "--------------------------------------------------------------------------------------------------"
+          echo "--------------------------------------------------------------------------------------------------";
           ibmcloud cos config crn;
-          echo "--------------------------------------------------------------------------------------------------"
+          echo "--------------------------------------------------------------------------------------------------";
           ibmcloud cos config list;
-          echo "--------------------------------------------------------------------------------------------------"
+          echo "--------------------------------------------------------------------------------------------------";
           ibmcloud cos buckets --ibm-service-instance-id 03263cd9-b065-4c85-8c28-66a94a6d9dde;
           
           
